<resources>

    <string name="app_name">Ελληνικές Συνταγές</string>

    <string name="clientID">759316138823-g9ncu3d4ckdug1k7iqarjmmmbf7j4ijb.apps.googleusercontent.com</string>
    <string name="auth_uri">tasos.grigoris.sharemyrecipe:/oauth2callback</string>

    <string name="nav_menu1">Δημοφιλείς</string>
    <string name="nav_menu2">Κατηγορίες</string>
    <string name="nav_menu3">Προσθήκη</string>
    <string name="nav_menu4">Αγαπημένες</string>
    <string name="nav_menu5">Προφίλ</string>

    <string name="minutes_cap">Λεπτά</string>

    <string name="systatika">Υλικά</string>

    <string name="submit">Καταχωρηση</string>
    <string name="publish">Δημοσιευση</string>

    <string name="my_rate">Βαθμολογία μου:</string>

    <string name="added_to_favorites">Η συνταγή προστέθηκε στα αγαπημένα.</string>
    <string name="removed_from_favorites">Η συνταγή αφαιρέθηκε από τα αγαπημένα</string>

    <string name="recipe_title">Τίτλος συνταγής</string>
    <string name="add_ingredient_title">Υλικό</string>
    <string name="add_description">Σύντομη περιγραφή συνταγής</string>
    <string name="add_ingredients">Υλικά</string>
    <string name="add_racions">Πόσες μερίδες;</string>
    <string name="add_amount">Ποσότητα</string>
    <string name="add_monada">Μονάδα</string>
    <string name="add_ingredient">Πρόσθεσε υλικό</string>
    <string name="add_section">Πρόσθεσε ενότητα</string>
    <string name="add_step">Πρόσθεσε βήμα</string>
    <string name="steps">Εκτέλεση</string>
    <string name="steps_hint">Γράψε οδηγίες</string>
    <string name="section_hint">Ενότητα</string>
    <string name="preparation_time">Χρόνος προετοιμασίας (λεπτά)</string>
    <string name="minute">λεπτό</string>
    <string name="minutes">λεπτά</string>

    <string name="upload_photo">Ανέβασμα φωτογραφίας</string>
    <string name="add_recipe_title">Στείλε τη συνταγή σου</string>
    <string name="difficulty">Βαθμός δυσκολίας</string>
    <string name="upload_success">Το ανέβασμα της συνταγής ολοκληρώθηκε</string>
    <string name="upload_failure">Το ανέβασμα της συνταγής απέτυχε</string>
    <string name="close">Κλείσιμο</string>

    <string name="no_recipes_to_show">Δεν υπάρχουν διαθέσιμες συνταγές για προβολή</string>
    <string name="no_favorites_to_show">Δεν υπάρχουν αγαπημένες συνταγές για προβολή</string>
    <string name="add_recipe_no_connection">Η επικοινωνία με τον Server απέτυχε. Δεν είναι δυνατή η προσθήκη νέας συνταγής</string>

    <string name="splash_label1">Νόστιμες,</string>
    <string name="splash_label2">Εύκολες,</string>
    <string name="splash_label3">Γρήγορες</string>
    <string name="splash_label4">Ελληνικές συνταγές</string>

    <string name="sign_in_prompt">Δημιούργησε λογαριασμό για να αποκτήσεις πρόσβαση σε όλα τα χαρακτηριστικά της εφαρμογής</string>
    <string name="terms_of_use_accept">Με την δημιουργία λογαρισμού αποδέχεστε τους όρους χρήσης και την πολιτική απορρήτου της Εφαρμογής</string>

    <string name="welcome">Καλώς Όρισες στις Ελληνικές συνταγές,</string>

    <string name="login">συνδεση μεσω gmail</string>
    <string name="logout">αποσυνδεση</string>

</resources>
