<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_recipes"
          android:enabled="true"
          android:icon="@drawable/ic_home"
          android:title="@string/nav_menu1"/>

    <item android:id="@+id/menu_categories"
          android:enabled="true"
          android:icon="@drawable/ic_categories"
          android:title="@string/nav_menu2"/>

    <item android:id="@+id/menu_favorites"
          android:enabled="true"
          android:icon="@drawable/ic_favorites_show_recipe"
          android:title="@string/nav_menu4"/>

    <item android:id="@+id/menu_profile"
          android:enabled="true"
          android:icon="@drawable/ic_profile"
          android:title="@string/nav_menu5"/>



</menu>