<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/black_light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/add_recipe_top">

    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_recipe_toolbar"
            app:theme="@style/ToolbarTheme"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

    </android.support.v7.widget.Toolbar>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:visibility="visible"
            android:id="@+id/add_recipe_content"
            app:layout_constraintTop_toBottomOf="@+id/add_recipe_toolbar">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    app:srcCompat="@android:color/holo_blue_bright"
                    android:id="@+id/add_recipe_feature_img"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/add_recipe_photo1"/>

            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    app:srcCompat="@android:color/holo_blue_dark"
                    android:id="@+id/add_recipe_photo1"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toEndOf="@+id/add_recipe_feature_img"
                    android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.5"/>

            <Button
                    android:text="@string/publish"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_recipe_publish"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/add_recipe_add_section"
                    app:layout_constraintVertical_bias="1.0"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/add_recipe_title"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/add_recipe_feature_img"
                    android:inputType="text"
                    android:hint="@string/recipe_title"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"/>


            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:id="@+id/add_recipe_description"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/add_recipe_title"
                    android:hint="@string/add_description"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_ingredients"
                    android:ems="10"
                    android:id="@+id/add_recipe_ingredients"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:gravity="center"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/add_recipe_preapration_time"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:ems="10"
                    android:id="@+id/add_recipe_racions"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/add_recipe_description"
                    android:hint="@string/add_racions"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:inputType="numberDecimal"/>

            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:id="@+id/add_recipe_racions_label"
                    app:layout_constraintStart_toEndOf="@+id/add_recipe_racions"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/add_recipe_racions"
                    app:layout_constraintBottom_toBottomOf="@+id/add_recipe_racions"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>

            <android.support.v7.widget.RecyclerView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/add_recipe_ingredients"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/add_recipe_ingredients_rv"/>

            <TextView
                    android:text="@string/add_ingredient"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_recipe_add_ingredient"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/add_recipe_ingredients_rv"
                    android:textColor="@color/white"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:gravity="center"/>

            <TextView
                    android:text="@string/steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_recipe_steps"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/add_recipe_add_ingredient"
                    android:textColor="@color/white"/>

            <android.support.v7.widget.RecyclerView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/add_recipe_steps"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:id="@+id/add_recipe_steps_rv"/>

            <TextView
                    android:text="@string/add_section"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_recipe_add_section"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/add_recipe_steps_rv"
                    android:textColor="@color/white"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/add_recipe_add_step"/>

            <TextView
                    android:text="@string/add_step"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_recipe_add_step"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/add_recipe_steps_rv"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/add_recipe_add_section"
                    app:layout_constraintHorizontal_bias="0.5"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/preparation_time"
                    android:ems="10"
                    android:id="@+id/add_recipe_preapration_time"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/add_recipe_racions"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:inputType="number"/>

            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_recipe_category"
                    android:backgroundTint="@color/white"
                    app:layout_constraintTop_toTopOf="@+id/add_recipe_preapration_time"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toEndOf="@+id/add_recipe_preapration_time"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/add_recipe_preapration_time"/>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>