<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
            android:hint="@string/add_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:id="@+id/add_ingredients_amount"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintEnd_toStartOf="@+id/add_ingredients_monada"
            android:inputType="number"/>

    <EditText
            android:hint="@string/add_monada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_ingredients_monada"
            android:gravity="left"
            app:layout_constraintStart_toEndOf="@+id/add_ingredients_amount"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/add_ingredients_name"/>

    <EditText
            android:hint="@string/add_ingredient_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_ingredients_name"
            android:gravity="left"
            app:layout_constraintStart_toEndOf="@+id/add_ingredients_monada"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/add_ingredients_row_delete"/>

    <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@android:drawable/ic_delete"
            android:id="@+id/add_ingredients_row_delete"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>